DuPont DevSB/src/objects/Customer_Data_Request_Line_Item__c.object
<CustomObject>
    <description>Line Items to capture multiple Bill To, ship to, Pay to and Partner User Requests</description>
    <fields>
        <fullName>Account_Group__c</fullName>
        <label>Account Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CARR(Carrier)</fullName>
                </value>
                <value>
                    <fullName>Z001 ( Sold-to party )</fullName>
                </value>
                <value>
                    <fullName>Z002 ( Ship-to party )</fullName>
                </value>
                <value>
                    <fullName>Z003 ( Pay-to party )</fullName>
                </value>
                <value>
                    <fullName>Z004 (Bill-to party)</fullName>
                </value>
                <value>
                    <fullName>ZBUN(Bunge)</fullName>
                </value>
                <value>
                    <fullName>ZCSR (Customer Service Rep)</fullName>
                </value>
                <value>
                    <fullName>ZEND (End User)</fullName>
                </value>
                <value>
                    <fullName>ZENF (Price Reference Customer)</fullName>
                </value>
                <value>
                    <fullName>ZMAR (Marine partner)</fullName>
                </value>
                <value>
                    <fullName>ZMSD (MSDS Alternate Address)</fullName>
                </value>
                <value>
                    <fullName>ZPRC(Price Reference Customer)</fullName>
                </value>
                <value>
                    <fullName>ZSRP (Sales Representative)</fullName>
                </value>
                <value>
                    <fullName>ZXNC (Non-transactional Cust.)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Name of the city as a part of the address of the New Partner</description>
        <label>City</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments related to the line item</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <description>The company code is an organizational unit within financial accounting.</description>
        <label>Company Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>4860 - DUP (Thailand) Ltd</fullName>
                </value>
                <value>
                    <fullName>0003 - E.I. DuPont India Private Limited</fullName>
                </value>
                <value>
                    <fullName>1132 - DuPont(China) RD and Mgmt</fullName>
                </value>
                <value>
                    <fullName>2791 - DUP China Hldg Co</fullName>
                </value>
                <value>
                    <fullName>0218 - DUP Trading Shanghai</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>Name of the Customer/Company for which this line Item is being created</description>
        <label>Company Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Sold_To_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To copy the sold to address as bill to/ship to/payer address</description>
        <label>Copy Sold To Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>This will capture country of the New Partner</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AD - Andorran</fullName>
                </value>
                <value>
                    <fullName>AE - Utd.Arab Emir.</fullName>
                </value>
                <value>
                    <fullName>AF - Afghanistan</fullName>
                </value>
                <value>
                    <fullName>AG - Antigua/Barbuda</fullName>
                </value>
                <value>
                    <fullName>AI - Anguilla</fullName>
                </value>
                <value>
                    <fullName>AL - Albania</fullName>
                </value>
                <value>
                    <fullName>AM - Armenia</fullName>
                </value>
                <value>
                    <fullName>AN</fullName>
                </value>
                <value>
                    <fullName>AO - Angola</fullName>
                </value>
                <value>
                    <fullName>AQ - Antarctica</fullName>
                </value>
                <value>
                    <fullName>AR - Argentina</fullName>
                </value>
                <value>
                    <fullName>AS - Samoa, America</fullName>
                </value>
                <value>
                    <fullName>AT - Austria</fullName>
                </value>
                <value>
                    <fullName>AU - Australia</fullName>
                </value>
                <value>
                    <fullName>AW - Aruba</fullName>
                </value>
                <value>
                    <fullName>AX - Aaland</fullName>
                </value>
                <value>
                    <fullName>AZ - Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>BA - Bosnia-Herz.</fullName>
                </value>
                <value>
                    <fullName>BB - Barbados</fullName>
                </value>
                <value>
                    <fullName>BD - Bangladesh</fullName>
                </value>
                <value>
                    <fullName>BE - Belgium</fullName>
                </value>
                <value>
                    <fullName>BF - Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>BG - Bulgaria</fullName>
                </value>
                <value>
                    <fullName>BH - Bahrain</fullName>
                </value>
                <value>
                    <fullName>BI - Burundi</fullName>
                </value>
                <value>
                    <fullName>BJ - Benin</fullName>
                </value>
                <value>
                    <fullName>BL - St. Barthélemy</fullName>
                </value>
                <value>
                    <fullName>BM - Bermuda</fullName>
                </value>
                <value>
                    <fullName>BN - Brunei Daruss.</fullName>
                </value>
                <value>
                    <fullName>BO - Bolivia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Contact_Function__c</fullName>
        <label>Customer Contact Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CP – Contact person</fullName>
                </value>
                <value>
                    <fullName>YT - Delivery contact person</fullName>
                </value>
                <value>
                    <fullName>YU - Invoice contact person</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Data_Request__c</fullName>
        <description>The reference to the Customer Data Request to which this Line item belongs</description>
        <label>Customer Data Request</label>
        <referenceTo>Customer_Data_Request__c</referenceTo>
        <relationshipLabel>Customer Data Request Line Items</relationshipLabel>
        <relationshipName>Customer_Data_Request_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Customer_Name_2__c</fullName>
        <description>Alternative name of the customer or an addition to the name of the customer</description>
        <label>Customer Name 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name_3__c</fullName>
        <description>Alternative name of the customer or an addition to the name of the customer</description>
        <label>Customer Name 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name_4__c</fullName>
        <description>Alternative name of the customer or an addition to the name of the customer</description>
        <label>Customer Name 4</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <description>Name of the Customer</description>
        <label>Customer Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <description>Unique SAP Customer Number of the Customer linked to the Customer Data Request</description>
        <label>Customer Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <description>The way in which products or services reach the customer. Typical examples of distribution channels are wholesale, retail, or direct sales.</description>
        <label>Distribution Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01-Z-Distr Channel 01</fullName>
                </value>
                <value>
                    <fullName>10-DuPont Std</fullName>
                </value>
                <value>
                    <fullName>11-Plant Ship Dir.</fullName>
                </value>
                <value>
                    <fullName>12-Z-Third Party Prod</fullName>
                </value>
                <value>
                    <fullName>13-Transfers</fullName>
                </value>
                <value>
                    <fullName>D2-Z-DTI Apparel</fullName>
                </value>
                <value>
                    <fullName>M3-Z-DTI Flr.Hme.Ind</fullName>
                </value>
                <value>
                    <fullName>M6-Z-DTI Intmdts</fullName>
                </value>
                <value>
                    <fullName>MX-Z-DTI-Transfers</fullName>
                </value>
                <value>
                    <fullName>RK-Z-Dtsr Channel 01</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <description>District of the address for the New Partner</description>
        <label>District</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>A way of grouping materials, products, or services. The system uses divisions to determine the sales areas and business areas to which a material, product, or service belongs. A product or service is always assigned to just one division.</description>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01-Product Division 01</fullName>
                </value>
                <value>
                    <fullName>02-GSD Standard</fullName>
                </value>
                <value>
                    <fullName>10-EP FILAMENTS B9</fullName>
                </value>
                <value>
                    <fullName>11-Eng Poly:Vespel?B9</fullName>
                </value>
                <value>
                    <fullName>12-DPP ELASTOMERS B9</fullName>
                </value>
                <value>
                    <fullName>13-DPP KALREZ B9</fullName>
                </value>
                <value>
                    <fullName>20-Color Filters F4</fullName>
                </value>
                <value>
                    <fullName>21-Color Proofing F4</fullName>
                </value>
                <value>
                    <fullName>22-Cyrel F4</fullName>
                </value>
                <value>
                    <fullName>23-MicrCircuitCompMatF4</fullName>
                </value>
                <value>
                    <fullName>24-PCM F4</fullName>
                </value>
                <value>
                    <fullName>25-HPM F4</fullName>
                </value>
                <value>
                    <fullName>26-DHM F4</fullName>
                </value>
                <value>
                    <fullName>27-POLYIMIDES F4</fullName>
                </value>
                <value>
                    <fullName>28-EKC F4</fullName>
                </value>
                <value>
                    <fullName>29-DEP F4</fullName>
                </value>
                <value>
                    <fullName>31-POLYMER  F3</fullName>
                </value>
                <value>
                    <fullName>32-RECYCLE/FIBERST F3</fullName>
                </value>
                <value>
                    <fullName>33-6/6 INTERMEDIATES F3</fullName>
                </value>
                <value>
                    <fullName>34-RESIDENTIAL FLOOR F3</fullName>
                </value>
                <value>
                    <fullName>35-COMMERCIAL FLOOR F3</fullName>
                </value>
                <value>
                    <fullName>36-RUGS      F3</fullName>
                </value>
                <value>
                    <fullName>37-TRANSPORTATION Fl F3</fullName>
                </value>
                <value>
                    <fullName>38-FLOORING OTHER F3</fullName>
                </value>
                <value>
                    <fullName>39-C-12 INTERMEDIATE F3</fullName>
                </value>
                <value>
                    <fullName>40-AA SPECIALTIES F3</fullName>
                </value>
                <value>
                    <fullName>41-HMD SPECIALTIES F3</fullName>
                </value>
                <value>
                    <fullName>42-NON-SD-DIVISION F3</fullName>
                </value>
                <value>
                    <fullName>43-NYLON INDUSTRIAL F3</fullName>
                </value>
                <value>
                    <fullName>44-Terathane Interm F3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ERP_Relationship_User__c</fullName>
        <description>Existing DuPont User to be related to Customer as a Partner like Customer Service Rep, Sales Representative etc.</description>
        <label>ERP Relationship User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <description>Email address of the new Partner</description>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>This field can be used to map the One DuPont Customer Data Request Line Item with the corresponding Utility record.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field can be used to map the One DuPont Customer Data Request Line Item with the corresponding Utility record.</inlineHelpText>
        <label>External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fax_Number__c</fullName>
        <description>Captures Fax Number</description>
        <label>Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>House_Supplement__c</fullName>
        <description>House Supplement</description>
        <label>House Supplement</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterms_Part_1__c</fullName>
        <description>Commonly-used trading terms that comply with the standards established by the International Chamber of Commerce (ICC). Incoterms specify certain internationally recognised procedures that the shipper and the receiving party must follow for the shipping transaction to be successfully completed.</description>
        <label>Incoterms (Part 1)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CFR</fullName>
                </value>
                <value>
                    <fullName>CIF</fullName>
                </value>
                <value>
                    <fullName>CIP</fullName>
                </value>
                <value>
                    <fullName>CPT</fullName>
                </value>
                <value>
                    <fullName>DAP</fullName>
                </value>
                <value>
                    <fullName>DAT</fullName>
                </value>
                <value>
                    <fullName>DDP</fullName>
                </value>
                <value>
                    <fullName>EXW</fullName>
                </value>
                <value>
                    <fullName>FAS</fullName>
                </value>
                <value>
                    <fullName>FCA</fullName>
                </value>
                <value>
                    <fullName>FOB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incoterms_Part_2__c</fullName>
        <description>Commonly-used trading terms that comply with the standards established by the International Chamber of Commerce (ICC). Incoterms specify certain internationally recognised procedures that the shipper and the receiving party must follow for the shipping transaction to be successfully completed.</description>
        <label>Incoterms (Part 2)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Local_Language_City__c</fullName>
        <description>Name of the city as a part of the address in local language</description>
        <label>Local Language City</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Language_Country__c</fullName>
        <description>&quot;Name of the Country in local language

The approved list of ISO countries use by DuPont. Source reference ISO 3166-1: http://www.iso.org/iso/country_codes/iso_3166_code_lists/english_country_names_and_code_elements.htm&quot;</description>
        <label>Local Language Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AD - Andorran</fullName>
                </value>
                <value>
                    <fullName>AE - Utd.Arab Emir.</fullName>
                </value>
                <value>
                    <fullName>AF - Afghanistan</fullName>
                </value>
                <value>
                    <fullName>AG - Antigua/Barbuda</fullName>
                </value>
                <value>
                    <fullName>AI - Anguilla</fullName>
                </value>
                <value>
                    <fullName>AL - Albania</fullName>
                </value>
                <value>
                    <fullName>AM - Armenia</fullName>
                </value>
                <value>
                    <fullName>AN</fullName>
                </value>
                <value>
                    <fullName>AO - Angola</fullName>
                </value>
                <value>
                    <fullName>AQ - Antarctica</fullName>
                </value>
                <value>
                    <fullName>AR - Argentina</fullName>
                </value>
                <value>
                    <fullName>AS - Samoa, America</fullName>
                </value>
                <value>
                    <fullName>AT - Austria</fullName>
                </value>
                <value>
                    <fullName>AU - Australia</fullName>
                </value>
                <value>
                    <fullName>AW - Aruba</fullName>
                </value>
                <value>
                    <fullName>AX - Aaland</fullName>
                </value>
                <value>
                    <fullName>AZ - Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>BA - Bosnia-Herz.</fullName>
                </value>
                <value>
                    <fullName>BB - Barbados</fullName>
                </value>
                <value>
                    <fullName>BD - Bangladesh</fullName>
                </value>
                <value>
                    <fullName>BE - Belgium</fullName>
                </value>
                <value>
                    <fullName>BF - Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>BG - Bulgaria</fullName>
                </value>
                <value>
                    <fullName>BH - Bahrain</fullName>
                </value>
                <value>
                    <fullName>BI - Burundi</fullName>
                </value>
                <value>
                    <fullName>BJ - Benin</fullName>
                </value>
                <value>
                    <fullName>BL - St. Barthélemy</fullName>
                </value>
                <value>
                    <fullName>BM - Bermuda</fullName>
                </value>
                <value>
                    <fullName>BN - Brunei Daruss.</fullName>
                </value>
                <value>
                    <fullName>BO - Bolivia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Local_Language_Customer_Name_2__c</fullName>
        <label>Local Language Customer Name 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Language_Customer_Name_3__c</fullName>
        <description>Alternative name of the customer or an addition to the name of the customer</description>
        <label>Local Language Customer Name 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Language_Data_Line__c</fullName>
        <description>Extension (only for data conversion) (e.g. data line)</description>
        <label>Local Language Data Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Language_District__c</fullName>
        <description>District as per the address in local language</description>
        <label>Local Language District</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Language_House_Supplement__c</fullName>
        <description>Local Language version of House Supplement</description>
        <label>Local Language House Supplement</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Language_Office_House_Number__c</fullName>
        <description>House number of Bill To address/Ship To address/ Payer in Local language</description>
        <label>Local Language Office/House Number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Language_Postal_Code__c</fullName>
        <description>The postal (zip) code for the address(street and city).</description>
        <label>Local Language Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Language_Region__c</fullName>
        <description>Region within a country selected as part of the address in local language.</description>
        <label>Local Language Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Local_Language_Search_Terms__c</fullName>
        <description>Short description for a search help using which a search criteria will be determined for a customer. 
For example: It could be the significant part of the name or an organizational assignment code.
Maintain, e.g. &apos;Hurst&apos; as first search term for the company &quot;&quot;Carl Hurst, Sons &amp; Co. Ltd. plc&quot;&quot;.
As second search term, maintain e.g. the name abbreviation used in your company, to find your data more easily later</description>
        <label>Local Language Search Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Language_State_Province__c</fullName>
        <description>State/Province as part of the Billing/Shipping/Payer address in local language</description>
        <label>Local Language State/Province</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Language_Street2__c</fullName>
        <label>Local Language Street2</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Language_Street3__c</fullName>
        <label>Local Language Street3</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Language_Street4__c</fullName>
        <label>Local Language Street4</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Language_Telebox__c</fullName>
        <description>Extension (only for data conversion) (e.g. telebox)</description>
        <label>Local Language Telebox</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Version__c</fullName>
        <description>The local language to be selected by the user entering the address(Bill To/Ship To/PayTo)</description>
        <label>Local Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Chinese Trad.</fullName>
                </value>
                <value>
                    <fullName>Cyrillic</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Hangul</fullName>
                </value>
                <value>
                    <fullName>Hebrew</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Kanji</fullName>
                </value>
                <value>
                    <fullName>Katakana</fullName>
                </value>
                <value>
                    <fullName>Thai</fullName>
                </value>
                <value>
                    <fullName>Ukranian_Cyril</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Local_language_Customer_Name_1__c</fullName>
        <description>Name of the Customer</description>
        <label>Local language Customer Name 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name1__c</fullName>
        <description>Name of the new Partner</description>
        <label>Name 1</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name2__c</fullName>
        <description>Alternative name of the new Partner or an addition to the name of the Partner</description>
        <label>Name 2</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name3__c</fullName>
        <description>Alternative name of the new Partner or an addition to the name of the Partner</description>
        <label>Name 3</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_House_Number__c</fullName>
        <description>House Number of the New Partner</description>
        <label>Office/ House Number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_By_Indicator__c</fullName>
        <description>In China it is used for domestic transportation arrangement.

On: Shipment need to be delivered to customer exactly on the required ETA (early delivery and late delivery are both unacceptable)
By:  Shipment need to be delivered to customer by the required ETA (early delivery is acceptable)</description>
        <label>On/By Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>By</fullName>
                </value>
                <value>
                    <fullName>On</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>P_O_Box_City__c</fullName>
        <description>City of the P.O.Box associated with the address</description>
        <label>P.O.Box City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P_O_Box__c</fullName>
        <description>P.O.Box of  the Address</description>
        <label>P.O.Box</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Data Request Line Items</relationshipLabel>
        <relationshipName>Customer_Data_Request_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>